# CompGraph

./: .gitmodules  CMakeLists.txt  Camera.cpp  GlObject.cpp  Scene.cpp  Shader.cpp  glad.c  helpers.cpp  main.cpp
include/: Camera.hpp  GlObject.hpp  Scene.hpp  Shader.hpp  helpers.hpp  lab_work_1.hpp  lab_work_2.hpp  lab_work_3.hpp
include/glad/: glad.h
shaders/: color_fragment.glsl  color_vertex.glsl  simple_fragment.glsl  simple_vertex.glsl  texture_fragment.glsl  texture_vertex.glsl
